--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "resolutions": {
+    "semver": "^7.5.3"
+  },
+  "overrides": { "semver": "^7.5.3" },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "framer-motion": "^7.6.19",
